[Fix] [User] OPTIONS /users/{idUser}, OPTIONS /users [Fix] [Result] OPTIONS /results/{idResult}, OPTIONS /results [Fix] [UserResult] OPTIONS /users/{idUser}/results [Fix] Swagger.
